force-app/main/default/objects/SBQQ__ProductOption__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>la tipologia di canale associato al dato record di product option</description>
    <label>Agenzia</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Options</relationshipLabel>
    <relationshipName>ProductOptions</relationshipName>
    <type>Lookup</type>
</CustomField>