force-app/main/default/objects/SBQQ__ProductOption__c/fields/BillingMode__c.field-meta.xml
<CustomField>
    <fullName>BillingMode__c</fullName>
    <label>Modalita di Fatturazione</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_BillingMethod</valueSetName>
    </valueSet>
</CustomField>