force-app/main/default/objects/SBQQ__ProductOption__c/fields/CategoryTypeClient__c.field-meta.xml
<CustomField>
    <fullName>CategoryTypeClient__c</fullName>
    <description>la tiologia di cliente legata al dato record di product option.</description>
    <label>Tipo Cliente/Categoria</label>
    <length>50</length>
    <type>Text</type>
</CustomField>