force-app/main/default/objects/SBQQ__ProductOption__c/fields/ChannelClient__c.field-meta.xml
<CustomField>
    <fullName>ChannelClient__c</fullName>
    <label>Canale Cliente</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>