force-app/main/default/objects/SBQQ__ProductOption__c/fields/ClientAge__c.field-meta.xml
<CustomField>
    <fullName>ClientAge__c</fullName>
    <description>la fascia di età legata al dato record di product option</description>
    <label>Età Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_ClientAge</valueSetName>
    </valueSet>
</CustomField>