force-app/main/default/objects/SBQQ__ProductOption__c/fields/ConstraintDiscountEurGiorno__c.field-meta.xml
<CustomField>
    <fullName>ConstraintDiscountEurGiorno__c</fullName>
    <description>Vincolo dello sconto Euro per Giorni</description>
    <formula>SBQQ__OptionalSKU__r.ConstraintDiscountEurGiorno__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vincolo Sconto Eur/Giorno (Giorni)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>