force-app/main/default/objects/SBQQ__ProductOption__c/fields/ConsumptionRangeEE__c.field-meta.xml
<CustomField>
    <fullName>ConsumptionRangeEE__c</fullName>
    <formula>TEXT(Range__r.RangeConsumptionEle__c)</formula>
    <label>Fasce Consumo EE</label>
    <type>Text</type>
</CustomField>