force-app/main/default/objects/SBQQ__ProductOption__c/fields/ContributionsType__c.field-meta.xml
<CustomField>
    <fullName>ContributionsType__c</fullName>
    <description>La Tipologia di contributi legata al product option</description>
    <label>Tipologia Contributi</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>