force-app/main/default/objects/SBQQ__ProductOption__c/fields/CorrHCNonSchedule__c.field-meta.xml
<CustomField>
    <fullName>CorrHCNonSchedule__c</fullName>
    <label>Corr. HC Non Orario (Eur/MWh)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>