force-app/main/default/objects/SBQQ__ProductOption__c/fields/CorrHCSchedule__c.field-meta.xml
<CustomField>
    <fullName>CorrHCSchedule__c</fullName>
    <label>Corr. HC Orario (Eur/MWh)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>