force-app/main/default/objects/SBQQ__ProductOption__c/fields/DelayDay__c.field-meta.xml
<CustomField>
    <fullName>DelayDay__c</fullName>
    <formula>SBQQ__OptionalSKU__r.DelayDay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>