force-app/main/default/objects/SBQQ__ProductOption__c/fields/DelayDayGas__c.field-meta.xml
<CustomField>
    <fullName>DelayDayGas__c</fullName>
    <formula>SBQQ__ConfiguredSKU__r.DelayDayGas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delay gas (gg)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>