force-app/main/default/objects/SBQQ__ProductOption__c/fields/DelayDiscountEuroGiorno__c.field-meta.xml
<CustomField>
    <fullName>DelayDiscountEuroGiorno__c</fullName>
    <description>Ritardo per l&apos;applicazione dello sconto Euro per Giorno</description>
    <formula>SBQQ__OptionalSKU__r.DelayDiscountEuroGiorno__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ritardo sconto Eur/Giorno (Giorni)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>