force-app/main/default/objects/SBQQ__ProductOption__c/fields/DurationDay__c.field-meta.xml
<CustomField>
    <fullName>DurationDay__c</fullName>
    <formula>SBQQ__OptionalSKU__r.DurationDay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durata Prodotto (gg)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>