force-app/main/default/objects/SBQQ__ProductOption__c/fields/DurationDayGas__c.field-meta.xml
<CustomField>
    <fullName>DurationDayGas__c</fullName>
    <formula>SBQQ__OptionalSKU__r.DurationDayGas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durata Gas (gg)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>