force-app/main/default/objects/SBQQ__ProductOption__c/fields/DurationDiscountPercentage__c.field-meta.xml
<CustomField>
    <fullName>DurationDiscountPercentage__c</fullName>
    <description>Durata dell&apos;applicazione sconto percentuale</description>
    <formula>SBQQ__OptionalSKU__r.DurationDiscountPercentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durata sconto Percentuale (Giorni)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>