force-app/main/default/objects/SBQQ__ProductOption__c/fields/EquipmentType__c.field-meta.xml
<CustomField>
    <fullName>EquipmentType__c</fullName>
    <description>la tipologia di apparecchiatura legata al dato record di product option</description>
    <label>EquipmentType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_MeterType</valueSetName>
    </valueSet>
</CustomField>