force-app/main/default/objects/SBQQ__ProductOption__c/fields/GreenEnergyOption__c.field-meta.xml
<CustomField>
    <fullName>GreenEnergyOption__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opzione Energia Verde</label>
    <type>Checkbox</type>
</CustomField>