force-app/main/default/objects/SBQQ__ProductOption__c/fields/IVA__c.field-meta.xml
<CustomField>
    <fullName>IVA__c</fullName>
    <formula>SBQQ__ConfiguredSKU__r.IVA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IVA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>