force-app/main/default/objects/SBQQ__ProductOption__c/fields/KeepConsumptionsAnalysis__c.field-meta.xml
<CustomField>
    <fullName>KeepConsumptionsAnalysis__c</fullName>
    <label>Mantieni Analisi Consumi</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>