force-app/main/default/objects/SBQQ__ProductOption__c/fields/Login__c.field-meta.xml
<CustomField>
    <fullName>Login__c</fullName>
    <description>lo user associato al dato record di product option.</description>
    <label>Login</label>
    <length>70</length>
    <type>Text</type>
</CustomField>