force-app/main/default/objects/SBQQ__ProductOption__c/fields/NewClient__c.field-meta.xml
<CustomField>
    <fullName>NewClient__c</fullName>
    <description>indica se tale record di product option è associabile ai new client.</description>
    <label>Nuovo Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_YN</valueSetName>
    </valueSet>
</CustomField>