force-app/main/default/objects/SBQQ__ProductOption__c/fields/NumberRateMonthly__c.field-meta.xml
<CustomField>
    <fullName>NumberRateMonthly__c</fullName>
    <description>Numero delle rate mensili</description>
    <formula>SBQQ__OptionalSKU__r.NumberRateMonthly__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numero Rate Mensili</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>