force-app/main/default/objects/SBQQ__ProductOption__c/fields/PaymentMode__c.field-meta.xml
<CustomField>
    <fullName>PaymentMode__c</fullName>
    <label>Modalita di Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_PaymentMode</valueSetName>
    </valueSet>
</CustomField>