force-app/main/default/objects/SBQQ__ProductOption__c/fields/PDRCode__c.field-meta.xml
<CustomField>
    <fullName>PDRCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sale Service Item</label>
    <referenceTo>SaleServiceItem__c</referenceTo>
    <relationshipLabel>Product Options (Sale Service Item)</relationshipLabel>
    <relationshipName>ProductOptionsPDR</relationshipName>
    <type>Lookup</type>
</CustomField>