force-app/main/default/objects/SBQQ__ProductOption__c/fields/Percentage__c.field-meta.xml
<CustomField>
    <fullName>Percentage__c</fullName>
    <description>Percentuale di sconto generica</description>
    <formula>SBQQ__OptionalSKU__r.Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentuale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>