force-app/main/default/objects/SBQQ__ProductOption__c/fields/PercentageF0__c.field-meta.xml
<CustomField>
    <fullName>PercentageF0__c</fullName>
    <description>Percentuale consumo fascia F0</description>
    <formula>SBQQ__OptionalSKU__r.PercentageF0__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentuale F0</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>