force-app/main/default/objects/SBQQ__ProductOption__c/fields/PercentagePick__c.field-meta.xml
<CustomField>
    <fullName>PercentagePick__c</fullName>
    <description>Percentuale di consumo su fascia F0 al picco</description>
    <formula>SBQQ__OptionalSKU__r.PercentagePick__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentuale F0 Picco</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>