force-app/main/default/objects/SBQQ__ProductOption__c/fields/PercentagePickOut__c.field-meta.xml
<CustomField>
    <fullName>PercentagePickOut__c</fullName>
    <description>Percentuale di consumo fuori picco</description>
    <formula>SBQQ__OptionalSKU__r.PercentagePickOut__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentuale Fuori Picco</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>