force-app/main/default/objects/SBQQ__ProductOption__c/fields/PhoneRecipient__c.field-meta.xml
<CustomField>
    <fullName>PhoneRecipient__c</fullName>
    <description>Telefono destinatario</description>
    <label>Telefono destinatario</label>
    <type>Phone</type>
</CustomField>