force-app/main/default/objects/SBQQ__ProductOption__c/fields/PODCode__c.field-meta.xml
<CustomField>
    <fullName>PODCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sale Service Item</label>
    <referenceTo>SaleServiceItem__c</referenceTo>
    <relationshipLabel>Product Options</relationshipLabel>
    <relationshipName>ProductOptions</relationshipName>
    <type>Lookup</type>
</CustomField>