force-app/main/default/objects/SBQQ__ProductOption__c/fields/PriceEurGiorno__c.field-meta.xml
<CustomField>
    <fullName>PriceEurGiorno__c</fullName>
    <description>Prezzo euro per giorno</description>
    <formula>SBQQ__OptionalSKU__r.PriceEurGiorno__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prezzo Eur/Giorno</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>