force-app/main/default/objects/SBQQ__ProductOption__c/fields/PriceF1__c.field-meta.xml
<CustomField>
    <fullName>PriceF1__c</fullName>
    <formula>SBQQ__ConfiguredSKU__r.PriceF1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prezzo F1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>