force-app/main/default/objects/SBQQ__ProductOption__c/fields/PriceFedFixed__c.field-meta.xml
<CustomField>
    <fullName>PriceFedFixed__c</fullName>
    <label>Prezzo FED fisso</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>