force-app/main/default/objects/SBQQ__ProductOption__c/fields/PriceGas__c.field-meta.xml
<CustomField>
    <fullName>PriceGas__c</fullName>
    <formula>SBQQ__OptionalSKU__r.PriceBonusGas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prezzo</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>