force-app/main/default/objects/SBQQ__ProductOption__c/fields/Range__c.field-meta.xml
<CustomField>
    <fullName>Range__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo di lookup all&apos;oggetto custom delle fasce</description>
    <label>Fascia</label>
    <referenceTo>Range__c</referenceTo>
    <relationshipLabel>Product Options</relationshipLabel>
    <relationshipName>ProductOptions</relationshipName>
    <type>Lookup</type>
</CustomField>