force-app/main/default/objects/SBQQ__ProductOption__c/fields/RegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>RegistrationNumber__c</fullName>
    <label>Matricola</label>
    <length>20</length>
    <type>Text</type>
</CustomField>