force-app/main/default/objects/SBQQ__ProductOption__c/fields/ResidentDeliveryAddress__c.field-meta.xml
<CustomField>
    <fullName>ResidentDeliveryAddress__c</fullName>
    <description>Flag che indica se il dato record di product option deve essere legato all&apos;indirizzo di residenza della fornitura.</description>
    <label>Residente Indirizzo di Fornitura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_YN</valueSetName>
    </valueSet>
</CustomField>