force-app/main/default/objects/SBQQ__ProductOption__c/fields/RoleProfile__c.field-meta.xml
<CustomField>
    <fullName>RoleProfile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo di configurazione usato per indicare il Ruolo/Profilo per il record di criterio nella funzionalità di Configurazione Offerta Tecnica</description>
    <label>Role Profile</label>
    <referenceTo>ProfileGroup__c</referenceTo>
    <relationshipLabel>Product Options</relationshipLabel>
    <relationshipName>ProductOptions</relationshipName>
    <type>Lookup</type>
</CustomField>