force-app/main/default/objects/SBQQ__ProductOption__c/fields/ShowInBill__c.field-meta.xml
<CustomField>
    <fullName>ShowInBill__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mostra in fattura</description>
    <label>Mostra in fattura</label>
    <type>Checkbox</type>
</CustomField>