force-app/main/default/objects/SBQQ__ProductOption__c/fields/SpecialDay__c.field-meta.xml
<CustomField>
    <fullName>SpecialDay__c</fullName>
    <label>Giorno speciale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_WeekDays</valueSetName>
    </valueSet>
</CustomField>