force-app/main/default/objects/SBQQ__ProductOption__c/fields/StartTimeSlot__c.field-meta.xml
<CustomField>
    <fullName>StartTimeSlot__c</fullName>
    <label>Inizio Fascia Oraria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_TimeSlot</valueSetName>
    </valueSet>
</CustomField>