force-app/main/default/objects/SBQQ__ProductOption__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>TEXT(SBQQ__OptionalSKU__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stato</label>
    <type>Text</type>
</CustomField>