force-app/main/default/objects/SBQQ__ProductOption__c/fields/TextInPrint__c.field-meta.xml
<CustomField>
    <fullName>TextInPrint__c</fullName>
    <formula>SBQQ__OptionalSKU__r.TextInPrint__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Testo in stampa</label>
    <type>Text</type>
</CustomField>