force-app/main/default/objects/SBQQ__ProductOption__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Versione del Product</description>
    <formula>SBQQ__OptionalSKU__r.Version__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Versione</label>
    <type>Text</type>
</CustomField>