force-app/main/default/objects/SBQQ__ProductOption__c/recordTypes/HDT_RT_ProductOptionDefault.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_ProductOptionDefault</fullName>
    <active>true</active>
    <description>Product Option Default RT</description>
    <label>Product Option Default RT</label>
</RecordType>